This is the CHANGELOG for amavisd-milter.

20130519:
	amavisd-milter-1.6.0:

	New features:
	- Added new amavisd-milter option -B which passes value of
	  {daemon_name} milter macro as amavisd-new policy bank name.

	Bug and compatibility fixies:
	- Added amavisd-milter.spec for compilation with rpmbuild.
	- Fixed typo which prevents using LDFLAGS on Debian.
	- Fixed missing definition of true and false in libmilter/mfapi.h.

20130422:
	Added new amavisd-milter option -B which uses value of {daemon_name}
	milter macro as amavisd-new policy bank name.

	Thanks to: Andreas Schulze

20130125:
	Included amavisd-milter.spec for compilation with rpmbuild.

	Thanks to: Jo Rhett <jrhett@netconsonance.com>

20120727:
	Include stdbool.h before libmilter/mfapi.h in compat/compat.h because
	libmilter/mfapi.h not define true and false.

20101105:
	Fixed typo in aclocal/ax_path_milter.m4 which prevents using LDFLAGS
	on Debian.

        Thanks to: Harald Jenny <harald@a-little-linux-box.at>

20100502:
	amavisd-milter-1.5.0:

	Bug and compatibility fixies:
	- Amavisd-new 2.7.0 introduce new AM.PDP response log_id.

20100501:
	Amavisd-new 2.7.0 introduce new AM.PDP response log_id.

	Thanks to: Andreas Schulze

20100131:
	amavisd-milter-1.4.1:

	New features:
	-  Added new amavisd-milter option -P which causes that mails pass
	   through when amavisd-new fails.

	Bug and compatibility fixies:
	- Debian installs libmilter.a to /usr/lib/libmilter.
	- sendmail 8.14 introduces three new libmilter callbacks.

20091029:
	amavisd-milter(8) manual page has been improved:
	- Added link to milter documentation.
	- Added socket name format description for sendmail and amavisd-new
	  socket.

20091003:
	Added new amavisd-milter option -P which causes that mails pass through
	when amavisd-new fails.

	Thanks to: Uli Schellhaas <uli.schellhaas@memware.de>

20090803:
	Bug fix - sendmail 8.14 introduces three new callbacks.

20090601: